[tool.poetry]
name = "samdavidtest"
version = "0.1.0"
description = ""
authors = ["Chipsus <chipsus@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
